# fdtd-norl

./: CMakeLists.txt
src/: fdtd.cpp  fdtd.hpp  grid.hpp  kernels.cpp  kernels.hpp  main.cpp  phys.hpp  queues.hpp
